# Emotion-Classification-Langgraph

./: .gitignore  Final Presentation TODO.md  README.md  TODO.md  data_pre_processing.ipynb  main.ipynb  main.py  output_results.csv  prompts  promtps.md  pyproject.toml  test.ipynb  testing.ipynb
00 documentation/Dump/: rationale_classification.md  role play prompting effectiveness.md
00 documentation/Publication/: Context over Categories_ Implementing the Theory of Constructed Emotion with LLM-Guided User Analysis.html  ValidationSuccess.html  paper_plan.txt
01 evaluation/Deprecated_User_Study/: user_ID_trace_mapping.md
Evaluation/: TODO  transcribe.ipynb
Example_Analysis/: example_analysis.md  gemini_pro_user_671476.md
Publication/: Video_script.md
User_Study/: HumanEval.xlsx  user-study-feedback.md  ~$HumanEval.xlsx
documentation/: Pipeline_Vertical.drawio
preprocessing/: article_comments.md  b_build_user_context.py  build_base_json.ipynb  build_base_json.py  build_base_with_filter_json.py  build_context_md.py  build_context_sphere.py  build_llm_readable.ipynb  build_user_context.py  build_user_json-v6.py  build_user_json_v7.py  config.json  create_sample_set.py  failed_users.json  graph LR.md  helper_functions.py  main.py  main_pipeline.py  main_single_user.py  preprocessing.ipynb  preprocessing.py  progress.json  token_distribution.py  token_stastics_file.py  user_226080_comments.md  user_503779_comments.md  user_570680_comments.md  validation_script.py  workflow.md
repo_reader/: index_repo.py
src/: TODO.py  generation_of_role_play_prompt.md
src_llm_pipeline/: TODO.py  config.json  data_models.py  emotion_analysis.csv  emotion_analysis.py  emotion_classification.py  gemini-flash-2.ipynb  langchain_tracing_test.py  llm_call.py  main.ipynb  main.py  model.py  new_data_model.py  reponse_schema_test.py  response.md  response_without_analysis_no_examples.md  rewe.md  save_output_to_csv.py  testing.ipynb
(+4709 files in other folders)
