[tool.poetry]
name = "emotion-classification-langgraph"
version = "0.1.0"
description = ""
authors = ["Nils Klüwer <n_klue@protonmail.com>"]
readme = "README.md"

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.1.9"
langchain = "^0.2.9"
langchain-community = "^0.2.7"
langchain-openai = "^0.1.17"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
openai = "^1.36.1"
tiktoken = "^0.7.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"


jupyter = "^1.0.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
