[tool.poetry]
name = "emotion-classification-langgraph"
version = "0.1.0"
description = ""
authors = ["Nils Klüwer <n_klue@protonmail.com>"]
readme = "README.md"

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "*"
langchain = "*"
langchain-community = "*"
langchain-openai = "*"
python-dotenv = "*"
pandas = "*"
openai = "*"
tiktoken = "*"
seaborn = "*"
scikit-learn = "*"
jupyter = "*"
vertexai = "*"
langchain-google-vertexai = "*"

langchain-anthropic = "^0.2.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"