[tool.poetry]
name = "emotion-classification-langgraph"
version = "0.1.0"
description = ""
authors = ["Nils Klüwer <n_klue@protonmail.com>"]
readme = "README.md"

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "3.13.1"
langgraph = "*"
langchain = "*"
langchain-community = "*"
langchain-openai = "*"
python-dotenv = "*"
pandas = "*"
openai = "*"
tiktoken = "*"
seaborn = "*"
scikit-learn = "*"
jupyter = "*"
vertexai = "*"
langchain-google-vertexai = "*"

langchain-anthropic = "*"
pytest = "^8.3.3"
icecream = "^2.1.3"
google-genai = "*"
lxml = "^5.3.0"
pathspec = "^0.12.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"